# collider

./: .gitignore  CMakeLists.txt  CMakeLists_wasm.txt  LICENSE  Makefile  README.md  collider.cxx  main.cxx  run_cutechess.sh
bak/include/: sdlp.h
bak/src/: collider.cpp  main.cpp  move.cpp
cmake/: Deps.cmake
cmake.deps/: CMakeLists.txt  deps.txt
cmake.deps/cmake/: BuildArmadillo.cmake  BuildTracy.cmake  Buildchug.cmake  Buildjsoncpp.cmake  Buildsuperlu.cmake
cmake.deps/smg/: CMakeLists.txt
cmake.deps/smg/cmake/: BuildCorrade.cmake  BuildMagnum.cmake  BuildMagnumIntegration.cmake  BuildMagnumPlugins.cmake
include/: AlphaBeta.hpp  BitBoards.hpp  BitBoards.hxx  Board.hpp  Board.hxx  Display.hxx  Engine.hpp  Engine.hxx  Extra.hpp  Extra.hxx  Log.hpp  Log.hxx  Piece.hpp  Piece.hxx  PieceMoves.hpp  PieceMoves.hxx  Pieces.hpp  Pieces.hxx  UCI.hpp  board.h  collider.h  common.hh  debug.h  debug.hh  debug.hpp  debug.hxx  error.hpp  error.hxx  primer.h  structs.hh  typedefs.hh
pgns/: results4.pgn  results_1.pgn
res/gimp/: bishopMaster.xcf  blackPawn.xcf  boardMaster.xcf  kingMaster.xcf  queenMasternxcf.xcf  rookMaster.xcf  whiteKnightMaster.xcf  whitePawn.xcf  whitePawn2.xcf  whitePawnMaster.xcf  whiteSquareMaster.xcf
res/masters/: blackBishop.xcf  blackPawn2.xcf  blackRook.xcf  whiteBishop.xcf
src/: Board.cpp  Board.cxx  Display.cxx  Engine.cpp  Engine.cxx  Log.cpp  Log.cxx  Piece.cpp  Piece.cxx  PieceMoves.cpp  PieceMoves.cxx  UCI.cpp  UCI.cxx  debug.cpp  display.cpp  eval.cpp  initial.cpp  input.cpp  legal.cpp  pv.cpp  sdlp.cpp  search.cpp
test/: CMakeLists.txt  test_alphabeta.cxx  test_board.cpp  test_board.cxx  test_board_gui.cpp  test_board_gui.cxx  test_perft.cxx  test_rftosq.cpp  test_rftosq.cxx  test_template.cpp  test_template.cxx  test_uci.cxx
